--- a/index.html
+++ b/index.html
@@ -86,21 +86,18 @@
     <div class="container">
       <div class="row justify-content-center fullscreen align-items-center">
         <div class="col-lg-5 col-md-8 home-banner-left">
-          <h1 class="text-white">
-            APSIT PRESENTS <br>
-          </h1>
-          <h4 class="text-white">TALENT FEST ... EVENTS BEYOND ALL
- LIMITS </h4><br>
+          <br><br><br><br><br><br><br><br><img src="img/apsit_presents.png" width="150%"><br><br><br><br><br><br><br><br><br><br><br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/talent-fest-final1.png" width="300" height="220">
           
-            <h4 class="text-white">#this_lockdown_wont_lock_us</h4><br><br><br>
+            <h4 class="text-center"><br>#this_lockdown_wont_lock_us</h4>
           
         </div>
         <div class="offset-lg-2 col-lg-5 col-md-12 home-banner-right">
-          <img class="img-fluid" src="img/header-img.png" alt="" />
+          <img class="img-fluid" src="img/header-img.png" alt="" /> 
         </div>
       </div>
     </div>
-  </section><br><br><br><br>
+  </section><br><br><br><br><br><br><br><br>
   <!-- ================ End banner Area ================= -->
 
   <!-- ================ Start Feature Area ================= -->
