--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
     <div class="container">
       <div class="row justify-content-center fullscreen align-items-center">
         <div class="col-lg-5 col-md-8 home-banner-left">
-          <br><br><br><br><br><br><br><br><img src="img/apsit_presents.png" width="150%"><br><br><br><br><br><br><br><br><br><br><br>
+          <br><br><br><br><br><br><img src="img/apsit_presents_final.png" width="100%"><br><br><br><br><br><br><br><br>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/talent-fest-final1.png" width="300" height="220">
           
-            <h4 class="text-center"><br>#this_lockdown_wont_lock_us</h4>
+            <h5 class="text-center"><br>#this_lockdown_wont_lock_us</h5>
           
         </div>
         <div class="offset-lg-2 col-lg-5 col-md-12 home-banner-right">
@@ -381,7 +381,7 @@
                 amet consec tetur adipisicing elit, sed do eiusmod tempor
                 incididunt labore.
               </p><br>
-              <a href="#" class="genric-btn info circle">View More</a>
+              <a href="Singing.html" class="genric-btn info circle">View More</a>
             </div>
           </div>
         </div>
@@ -575,7 +575,7 @@
 
 
   <!-- ================ Start Testimonials Area ================= -->
-  <section class="testimonials-area section-gap">
+  <!-- <section class="testimonials-area section-gap">
     <div class="section-title text-center">
             <h2>
               Testimonals
@@ -633,7 +633,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- ================ End Testimonials Area ================= -->
 
   <!-- ================ Start Registration Area ================= -->
