--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="row justify-content-center fullscreen align-items-center">
         <div class="col-lg-5 col-md-8 home-banner-left">
           <br><br><br><br><br><br><img src="img/apsit_presents_final.png" width="100%"><br><br><br><br><br><br><br><br>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/talent-fest-final1.png" width="300" height="220">
+          <img src="img/talent-fest-final1.png" width="300" height="220">
           
             <h5 class="text-center"><br>#this_lockdown_wont_lock_us</h5>
           
