--- a/about.html
+++ b/about.html
@@ -105,23 +105,26 @@
         </div>
         <div class="offset-lg-1 col-lg-5 col-md-12 about-right">
           <h1>
-            About&nbsp; APSIT
+            About <br>APSIT&nbsp; Talent&nbsp; Fest
           </h1>
           <div>
             <p>
-             A.P. Shah Institute of Technology has started functioning with
-commitment of imparting state of art technical education so as
-to inculcate conceptual know-how, analyzing skills, decision
-making abilities and leadership qualities in the students. APSIT is
-Accredited by National Board of Accreditation (NBA) for all five
-courses made available and ensures quality of education. 
+            APSIT TALENT FEST is an open festival to entire Thane city
+hosted by the students of APSIT. Its an amalgamation of
+cultural, arts, literature, technical and gaming events
+comprising of intellectual as well as fun and creative events
+with a variety of scope for all.
             </p>
             <p>
-              APSIT
-has experienced and proficient team which aspires to unlock the
-hidden potential in minds of students and to create globally
-competent engineers.
-            </p>
+              It's not just any event organised,
+but an open platform welcoming all with an opportunity to
+showcase their talent to the entire city. So join us and express
+your hidden gems of talent and also compete with the best.
+            </p><br>
+            <a href="#"><ion-icon size="large" name="logo-facebook"></ion-icon></a>&nbsp;&nbsp;&nbsp;
+                    <a href="#"><ion-icon size="large" name="logo-instagram"></ion-icon></a>&nbsp;&nbsp;&nbsp;
+                    <a href="#"><ion-icon size="large" name="logo-twitter"></ion-icon></a>&nbsp;&nbsp;&nbsp;
+                    <a href="#"><ion-icon size="large" name="logo-youtube"></ion-icon></a>&nbsp;&nbsp;&nbsp;
           </div>
         </div>
       </div>
@@ -132,7 +135,7 @@ competent engineers.
 
 
   
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="col-md-12">
           <h1 class="text">About APSIT Talent Fest</h1><br>
@@ -149,7 +152,7 @@ your hidden gems of talent and also compete with the best.</p><br></div>
         </div>
       </div>
     </div>
- 
+  -->
 
 
   <!-- ================ Start Video Area ================= -->
@@ -446,6 +449,9 @@ your hidden gems of talent and also compete with the best.</p><br></div>
   <script src="js/waypoints.min.js"></script>
   <script src="js/jquery.nice-select.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+
+
 </body>
 
 </html>
