--- a/cultural.html
+++ b/cultural.html
@@ -99,26 +99,12 @@
             <h4>Singing</h4>
             <div>
               <p>
-                Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                amet consec tetur adipisicing elit, sed do eiusmod tempor
-                incididunt labore.
-              </p><br>
-              <a href="#" class="genric-btn info circle">View More</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6">
-          <div class="other-feature-item">
-            <i><img src="img/sing.png" width="50"></i>
-            <h4>Dance</h4>
-            <div>
-              <p>
-                Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                amet consec tetur adipisicing elit, sed do eiusmod tempor
-                incididunt labore.
+                Music is an Euphoric religion.
+Music is the most Divine feeling.
+Music is the nectar to our soul.
+Music is what gives Life some meaning.
+Every voice is uniquely ravishing, Every voice unfolds a different facet of Music, Every voice has its own story.
+So Sing your hearts out with us at the *(Singing competition Name)*, and let your melody narrate it's own tales...
               </p><br>
               <a href="#" class="genric-btn info circle">View More</a>
             </div>
@@ -131,15 +117,29 @@
             <h4>Fine Arts</h4>
             <div>
               <p>
-                Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                amet consec tetur adipisicing elit, sed do eiusmod tempor
-                incididunt labore.
+                _"I don't know where I belong, I don't know where I went wrong/ But I can write a song" - "Ho Hey", The Lumineers_
+If you notice, each one of us has turned to some or the other art form during this lockdown. You see, we humans are like onions - you peel us layer by layer and all our worries, desires, frustrations fall off to reveal an art form; for our art shows who we truly are. So give us a glimpse of your true self with your art in our brand new event. And you know what's the best thing about art? It doesn't have to be perfect - it just has to come from inside you. So what are you waiting for? Get going!
               </p><br>
               <a href="#" class="genric-btn info circle">View More</a>
             </div>
           </div>
         </div>
+
+        <div class="col-lg-4 col-md-6">
+          <div class="other-feature-item">
+            <i><img src="img/sing.png" width="50"></i>
+            <h4>Dance</h4>
+            <div>
+              <p>
+                There are many shortcuts to happiness and dancing is definitely one of them. It is the purest form of expression when words don't do justice.
+Keeping in mind 'dance to express not to impress' ,  why not lose the quarantine boredom , turn on your dance mode and shake a leg with Apsit thane's upcoming dance event. 
+              </p><br>
+              <a href="#" class="genric-btn info circle">View More</a>
+            </div>
+          </div>
+        </div>
+
+        
 
         <div class="col-lg-4 col-md-6">
           <div class="other-feature-item">
@@ -147,15 +147,17 @@
             <h4>Photography</h4>
             <div>
               <p>
-                Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                amet consec tetur adipisicing elit, sed do eiusmod tempor
-                incididunt labore.
+                Photography is not just a hobby..It's a passion to live your dreams in a single picture and give your best shot to make it perfect. So for all those enthusiasts here's an opportunity for you to tell your story through your photograph. Be ready , fold your sleeves, grab your camera Don’t miss it, just click it.
+
               </p><br>
               <a href="#" class="genric-btn info circle">View More</a>
             </div>
           </div>
         </div>
+
+
+
+
 
         <div class="col-lg-4 col-md-6">
           <div class="other-feature-item">
@@ -163,10 +165,7 @@
             <h4>PUBG</h4>
             <div>
               <p>
-                Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                amet consec tetur adipisicing elit, sed do eiusmod tempor
-                incididunt labore.
+                We bring you a contest for one of the most popular games of our time - *PUBG*! So gather up your squad, sharpen your instincts and take the right decisions, for this is a game of life and death. And as the good Mr Thanos taught us, "Aim for the head." 
               </p><br>
               <a href="#" class="genric-btn info circle">View More</a>
             </div>
