--- a/technical.html
+++ b/technical.html
@@ -99,10 +99,8 @@
             <h4>Project Presentation</h4>
             <div>
               <p>
-                Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                amet consec tetur adipisicing elit, sed do eiusmod tempor
-                incididunt labore.
+                "Every project is incomplete if it's not understood by the people"..
+Presenting something is not just about having information,it needs urge to deliver upto audience..For all those who stand out by their extraordinary talent to mark their point, here's the opportunity.. Let your voice sounds be real n clear..
               </p><br>
               <a href="#" class="genric-btn info circle">View More</a>
             </div>
@@ -115,10 +113,10 @@
             <h4>Poster Presentation</h4>
             <div>
               <p>
-                Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                amet consec tetur adipisicing elit, sed do eiusmod tempor
-                incididunt labore.
+                _Good art inspires, Good Designs motivate..._
+So now's your chance to woo us all with your creativity and your artistry... 
+APSIT brings to you, the *(poster presentation event name)* where you'll have to think outside the box, and put your best designs forward...
+So Join in and let your Designs be Fresh and Native.
               </p><br>
               <a href="#" class="genric-btn info circle">View More</a>
             </div>
@@ -131,10 +129,8 @@
             <h4>Dream Tech</h4>
             <div>
               <p>
-                Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                amet consec tetur adipisicing elit, sed do eiusmod tempor
-                incididunt labore.
+                "No matter what people tell you, words and ideas can change the world" - Dead Poets Society (1989)
+All that a startup truly needs is an idea - one that is truly innovative, one which can take the world by storm. So get the gears in your head turning and give us the best idea for your dream startup in DreamTech. No matter how outlandish or challenging the idea may seem, present it to us in the best possible way and give wings to your startup dreams!
               </p><br>
               <a href="#" class="genric-btn info circle">View More</a>
             </div>
@@ -147,10 +143,10 @@
             <h4>Codeathon</h4>
             <div>
               <p>
-                Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                amet consec tetur adipisicing elit, sed do eiusmod tempor
-                incididunt labore.
+                Lots of people code for fun, and for many different reasons. For some people, it's the fun of building an application For others, it's the process of creating something that works.
+Coding can be very engaging and the result is what matters .
+It develops the ability in us to make applications and websites for things we care about and want to share .
+So get ready with all the A, B ,C, C++ of programming , loop your excitement , don't if else your decisions and itch some brains to code it all with this codeathon event.
               </p><br>
               <a href="#" class="genric-btn info circle">View More</a>
             </div>
@@ -163,10 +159,9 @@
             <h4>Ideathon</h4>
             <div>
               <p>
-                Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                amet consec tetur adipisicing elit, sed do eiusmod tempor
-                incididunt labore.
+                Modern Problems, require Modern Solutions 
+APSIT brings you this unique innovation Challenge The IDEATHON. Giving you this chance to flex your brilliance and woo us with your creativity and eccentricity.
+So Come on, What's stopping you ?
               </p><br>
               <a href="#" class="genric-btn info circle">View More</a>
             </div>
@@ -180,10 +175,12 @@
             <h4>Tech Quiz</h4>
             <div>
               <p>
-                Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                amet consec tetur adipisicing elit, sed do eiusmod tempor
-                incididunt labore.
+                With science and technology growing at such an alarming rate, facts and figures keep adding every second. To match the influx of this humongous amount of data we need a brain that's sharp as a razor.
+And the quest for the search of this perfect brain ends at (technical quiz event name)!!!
+With a wide array of questions from numerous technical topics, this is one event which will rupture the boundaries of your technical mythoi.
+
+So join us for the Quiz.
+Let the whip-smart Brain win.
               </p><br>
               <a href="#" class="genric-btn info circle">View More</a>
             </div>
